--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 body {
-  // background-color: gradient() #d02a2a !important;
-  background: linear-gradient(#d02a2a, #d02a2a, #d02a2a, #ce6868) !important;
+  background: #bb010b !important;
+  // background: linear-gradient(#d02a2a, #d02a2a, #d02a2a, #ce6868) !important;
 }
 
 #particles-js {
