--- a/src/assets/style/Tombola.scss
+++ b/src/assets/style/Tombola.scss
@@ -12,6 +12,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .logo-100 {
@@ -23,8 +24,22 @@
   height: 100vh;
 }
 
-.contador {
-  font-size: 45px;
+.section-contador {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  background-color: rgb(181, 181, 181);
+  .contador {
+    font-size: 5rem;
+    color: #000;
+    font-family: Arial, Helvetica, sans-serif;
+  }
 }
 
 .ganadores {
@@ -34,4 +49,29 @@
   align-items: center;
   flex-wrap: wrap;
   overflow: auto;
+  z-index: -1;
+  overflow: hidden; // quitar esta cuando jale todo
+}
+
+.section-ruleta {
+  height: 320px;
+  overflow: auto;
+  .card-ruleta {
+    // display: none;
+  }
+}
+
+.btn-reset {
+  font-size: 32px;
+  border: 0;
+  padding: 20px;
+  background-color: tomato;
+  color: #fff;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+}
+
+.btn-reset:hover {
+  background-color: rgb(226, 106, 85);
 }
