se agregaron y modificaron componentes

--- a/src/assets/style/confeti.scss
+++ b/src/assets/style/confeti.scss
@@ -24,7 +24,7 @@
 }
 
 .text-ganador {
-  color: #000;
+  color: #fff;
   font-weight: bold;
   font-size: 6rem;
   text-align: center;
@@ -32,7 +32,7 @@
 
 @media only screen and (max-width: 600px) {
   .text-ganador {
-    color: #000;
+    color: #fff;
     font-weight: bold;
     font-size: 1.4rem;
     text-align: center;
