--- a/src/assets/style/Tombola.scss
+++ b/src/assets/style/Tombola.scss
@@ -13,6 +13,9 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  img {
+    width: 50%;
+  }
 }
 
 .logo-100 {
@@ -22,6 +25,10 @@
   align-items: center;
   flex-direction: column;
   height: 100vh;
+
+  img {
+    width: 50%;
+  }
 }
 
 .section-contador {
@@ -34,11 +41,11 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  background-color: rgb(181, 181, 181);
+  background-color: #bb010b;
   .contador {
-    font-size: 5rem;
-    color: #000;
-    font-family: Arial, Helvetica, sans-serif;
+    font-size: 6rem;
+    color: #fff;
+    font-weight: bold;
   }
 }
 
@@ -50,15 +57,18 @@
   flex-wrap: wrap;
   overflow: auto;
   z-index: -1;
-  overflow: hidden; // quitar esta cuando jale todo
+  overflow: hidden;
 }
 
 .section-ruleta {
-  height: 320px;
-  overflow: auto;
-  .card-ruleta {
-    // display: none;
-  }
+  height: 360px;
+  // width: 90%;
+  overflow: hidden;
+  // padding: 10px 10px;
+  // background-color: green;
+  // .card-ruleta {
+  //   height: 100% !important;
+  // }
 }
 
 .btn-reset {
@@ -74,4 +84,28 @@
 
 .btn-reset:hover {
   background-color: rgb(226, 106, 85);
+}
+
+.animation-container {
+  overflow: hidden;
+}
+
+.name-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 90%;
+}
+
+.scrollNames {
+  animation: scrollNames 140s linear infinite;
+}
+
+@keyframes scrollNames {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-100%);
+  }
 }
